RESOLVED FIXED283357
[GStreamer] Fix hang in webaudio
https://bugs.webkit.org/show_bug.cgi?id=283357
Summary [GStreamer] Fix hang in webaudio
Vivienne Watermeier
Reported 2024-11-19 05:45:39 PST
During a PAUSED_TO_READY state change, there is a race condition between webKitWebAudioSrcRenderAndPushFrames setting dispatchDone true, and the state change resetting it to false, so that the renderer thread will block on dispatchCondition. To fix this, the state transition no longer sets dispatchDone to false, which is already done on every renderer thread entry. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1426
Attachments
Vivienne Watermeier
Comment 1 2024-11-19 05:46:57 PST
EWS
Comment 2 2024-11-19 07:34:00 PST
Committed 286797@main (a127f8f44e5d): <https://commits.webkit.org/286797@main> Reviewed commits have been landed. Closing PR #36846 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-19 07:34:15 PST
Note You need to log in before you can comment on or make changes to this bug.