Cherry-pick 286797@main (a127f8f44e5d). https://bugs.webkit.org/show_bug.cgi?id=283357

[GStreamer] Fix hang in webaudio
    https://bugs.webkit.org/show_bug.cgi?id=283357

    Reviewed by Philippe Normand.

    During a PAUSED_TO_READY state change, there is a race condition between
    webKitWebAudioSrcRenderAndPushFrames setting dispatchDone true, and
    the state change resetting it to false, so that the renderer thread
    will block on dispatchCondition.

    To fix this, the state transition no longer sets dispatchDone to false,
    which is already done on every renderer thread entry.

    Original author: Marcin Mielczarczyk <marcin.mielczarczyk@redembedded.com>
    See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1426

    * Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
    (webKitWebAudioSrcChangeState):

    Canonical link: https://commits.webkit.org/286797@main

Canonical link: https://commits.webkit.org/282416.323@webkitglib/2.46